--- a/AVTCameraManipulate.vcxproj
+++ b/AVTCameraManipulate.vcxproj
@@ -101,6 +101,10 @@
   <ItemGroup>
     <ClInclude Include="AVTCameraManipulate.h" />
     <ClInclude Include="AVTCameraManipulateDlg.h" />
+    <ClInclude Include="jconfig.h" />
+    <ClInclude Include="jerror.h" />
+    <ClInclude Include="jmorecfg.h" />
+    <ClInclude Include="jpeglib.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
